# free-ladder

./: .gitignore  20250907.ipynb  AGENTS.md  README.md  pyproject.toml
.github/: copilot-workspace-instructions.md  repository-structure-knowledge-base.md
.github/agents/: project-structure-mapper.agent.md  quant-factor-developer.agent.md
.github/factors/: rsrs-factor-definition.md
.github/instructions/: etf-data-architecture.instructions.md
libs/: _test_threshold_filter.py  config.py
libs/backtesting/: __init__.py  custom_strategy_example.py  data.py  engine.py  index_rotation.py  multi_factor_strategy.py  performance.py  portfolio.py  preprocessing.py  rotation_signal.py  single_factor_single_target_strategy.py  summary_compare.py  timing_batch.py  wide_momentum_baseline.py
libs/data_manager/: cluster_provider.py  etf_data_manager.py  index_data_manager.py  utils.py
libs/factor_analysis/: __init__.py  config.py  forward_returns.py  grouping.py  panel.py  plotting.py  predictive.py  quality.py  reporter.py  runner.py
libs/factors/: average_amount.py  average_true_range.py  base_cross_section_factor.py  base_factor.py  breakout_family.py  change_since_new_high.py  daily_rebound.py  derived_factor.py  distribution_family.py  ma.py  meta_factor.py  new_high.py  oscillator.py  price_momentum.py  price_return.py  reversal.py  rolling_ols.py  rsrs.py  trend_quality.py  trend_r2.py  utils.py  volatility.py  volume_family.py  (+1 more)
notebooks/: .gitignore  20250907.ipynb  DailyAnalysis.ipynb  dailyUpdate.ipynb  single_factor_backtest.ipynb  wide_momentum_screening.ipynb
(+2005 files in other folders)
